feat(ui): improve statusbar and general ui

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,16 +4,30 @@ set -g prefix C-Space
 bind C-Space send-prefix
 
 # Status bar
+set -g status-interval 5
+
 set -g status-style bg=default
-set -g status-justify centre
 
 set -g status-left "#[bg=blue,fg=color16] #S #[bg=default,fg=blue]"
 set -g status-left-length 50
 
+# set -g status-right "#[bg=default,fg=black]#[bg=black,fg=white]   #(~/.config/tmux/music/now-playing.sh) #[bg=black,fg=blue]#[bg=blue,fg=color16] %H:%M "
 set -g status-right "#[bg=default,fg=blue]#[bg=blue,fg=color16] %H:%M "
+set -g status-right-length 50
 
-set -g window-status-format "#[bg=default,fg=black]#[bg=black,fg=white] #I:#W #[bg=default,fg=black]"
-set -g window-status-current-format "#[bg=default,fg=magenta]#[bg=magenta,fg=color16] #I:#W #[bg=default,fg=magenta]"
+set -g window-status-format "#[bg=default,fg=black]#[bg=black,fg=white] #[fg=magenta]#I #[fg=white] #[fg=white]#W #[bg=default,fg=black]"
+set -g window-status-current-format "#[bg=default,fg=magenta]#[bg=magenta,fg=color16] #I  #[fg=color16]#W #[bg=default,fg=magenta]"
+
+set -g window-status-separator ""
+
+# Panes
+set -g pane-border-style "fg=black"
+set -g pane-active-border-style "fg=magenta"
+
+# Messages & mode
+set -wg mode-style "bg=blue,fg=color16"
+set -g message-command-style "bg=blue,fg=color16"
+set -g message-style "bg=blue,fg=color16"
 
 # Colorscheme
 set -g default-terminal "alacritty"
