--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,31 +3,41 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
+# Palette
+set -g @paper_color "#16161e"
+set -g @primary_tinted_color "#11151f"
+set -g @primary_color "blue"
+set -g @secondary_color "magenta"
+
 # Status bar
 set -g status-interval 5
 
 set -g status-style bg=default
 
-set -g status-left "#[bg=blue,fg=color16] #S #[bg=default,fg=blue]"
+set -g status-left "#[bg=#{@primary_color},fg=color16] #S #[bg=default,fg=#{@primary_color}]"
 set -g status-left-length 50
 
-# set -g status-right "#[bg=default,fg=black]#[bg=black,fg=white]   #(~/.config/tmux/music/now-playing.sh) #[bg=black,fg=blue]#[bg=blue,fg=color16] %H:%M "
-set -g status-right "#[bg=default,fg=blue]#[bg=blue,fg=color16] %H:%M "
+set -g status-right "#[bg=default,fg=#{@primary_color}]#[bg=#{@primary_color},fg=color16] %H:%M "
 set -g status-right-length 50
 
-set -g window-status-format "#[bg=default,fg=black]#[bg=black,fg=white] #[fg=magenta]#I #[fg=white] #[fg=white]#W #[bg=default,fg=black]"
-set -g window-status-current-format "#[bg=default,fg=magenta]#[bg=magenta,fg=color16] #I  #[fg=color16]#W #[bg=default,fg=magenta]"
+set -g window-status-format "#[bg=default,fg=black]#[bg=black,fg=white] #[fg=#{@secondary_color}]#I #[fg=white] #[fg=white]#W #[bg=default,fg=black]"
+set -g window-status-current-format "#[bg=default,fg=#{@secondary_color}]#[bg=#{@secondary_color},fg=color16] #I  #[fg=color16]#W #[bg=default,fg=#{@secondary_color}]"
 
 set -g window-status-separator ""
 
 # Panes
 set -g pane-border-style "fg=black"
-set -g pane-active-border-style "fg=magenta"
+set -g pane-active-border-style "fg=#{@secondary_color}"
 
-# Messages & mode
-set -wg mode-style "bg=blue,fg=color16"
-set -g message-command-style "bg=blue,fg=color16"
-set -g message-style "bg=blue,fg=color16"
+# Mode 
+set -wg mode-style "bg=#{@primary_tinted_color},fg=#{@primary_color}"
+
+# Messages 
+set -g message-command-style "bg=#{@paper_color},fg=#{@primary_color}"
+set -g message-style "bg=#{@paper_color},fg=#{@primary_color}"
+
+unbind-key :
+bind-key : command-prompt -p " " "%%"
 
 # Colorscheme
 set -g default-terminal "alacritty"
