feat(qol): quality of life improvements

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,11 +37,12 @@ set -g message-command-style "bg=#{@paper_color},fg=#{@primary_color}"
 set -g message-style "bg=#{@paper_color},fg=#{@primary_color}"
 
 # Colorscheme
-set -g default-terminal "alacritty"
-set -sg terminal-overrides "*:RGB"
-set-option -ga terminal-features ",alacritty:usstyle"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+
+set -g default-terminal "${TERM}"
+set -as terminal-features ",${TERM}:RGB"
+set -as terminal-overrides ",${TERM}:RGB"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  
+set -as terminal-overrides ',*:Setulc=\E[58::2::::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m' 
 
 # Enable vi mode
 set-window-option -g mode-keys vi
